# challenge-pismoio

./: .gitignore  Makefile  README.md  configurations.yaml  docker-compose.yml  pyproject.toml
challenge_pismoio/: debugger.py  event_processor.py  mock_producer.py  validade.py
challenge_pismoio/common/: constants.py  logger.py
challenge_pismoio/models/: client_a.json  client_b.json  client_c.json  mock_payloads.py
challenge_pismoio/services/: kafka.py
challenge_pismoio/tests/: test_2_event_processor.py  test_kafka_service.py
