[tool.poetry]
name = "challenge-pismoio"
version = "0.1.0"
description = ""
authors = ["Yuri Fialho <ynfialho@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
confluent-kafka = "1.9.2"
requests = "^2.28.1"
avro = "1.10.0"
Faker = "^14.1.0"
fastavro = "^1.6.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"
PyYAML = "^6.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
